Fixed the footer color if the page is too short.

--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -3,6 +3,7 @@
 html {
   position: relative;
   min-height: 100%;
+  background-color: #2C3E50;
 }
 body {
   /* Margin bottom by footer height */
